Add deprecated route
